examples/test/testpolicy2371.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2371
  namespace: namespace388
spec:
  podSelector:
    matchLabels:
      key38: value1
      key25: value45
      key32: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value0
      podSelector:
        matchLabels:
          key49: value41
